syntax = "proto3";

package graphpb.testpb;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
// import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/afking/graphpb/testpb;testpb";

service Messaging {
  // HTTP | gRPC
  // -----|-----
  // `GET /v1/messages/123456`  | `GetMessageOne(name: "messages/123456")`
  rpc GetMessageOne(GetMessageRequestOne) returns (Message) {
    option (google.api.http) = {
      get : "/v1/messages/{name=name/*}"
    };
  }

  // HTTP | gRPC
  // -----|-----
  // `GET /v1/messages/123456?revision=2&sub.subfield=foo` |
  // `GetMessage(message_id: "123456" revision: 2 sub: SubMessage(subfield:
  // "foo"))`
  // `GET /v1/users/me/messages/123456` | `GetMessage(user_id: "me" message_id:
  // "123456")`
  rpc GetMessageTwo(GetMessageRequestTwo) returns (Message) {
    option (google.api.http) = {
      get : "/v1/messages/{message_id}"
      additional_bindings {get : "/v1/users/{user_id}/messages/{message_id}"}
    };
  }

  // HTTP | gRPC
  // -----|-----
  // `PATCH /v1/messages/123456 { "text": "Hi!" }` | `UpdateMessage(message_id:
  // "123456" message { text: "Hi!" })`
  rpc UpdateMessage(UpdateMessageRequestOne) returns (Message) {
    option (google.api.http) = {
      patch : "/v1/messages/{message_id}"
      body : "message"
    };
  }

  // HTTP | gRPC
  // -----|-----
  // `PATCH /v1/messages/123456 { "text": "Hi!" }` | `UpdateMessage(message_id:
  // "123456" text: "Hi!")`
  rpc UpdateMessageBody(Message) returns (Message) {
    option (google.api.http) = {
      patch : "/v1/messages/{message_id}/body"
      body : "*"
    };
  }
}
message Message {
  string message_id = 1;
  string text = 2; // The resource content
  string user_id = 3;
}
message GetMessageRequestOne {
  string name = 1; // Mapped to URL path
}
message GetMessageRequestTwo {
  message SubMessage { string subfield = 1; }
  string message_id = 1; // Mapped to URL path
  int64 revision = 2;    // Mapped to URL query parameter `revision`
  SubMessage sub = 3;    // Mapped to URL query parameter `sub.subfield`
  string user_id = 4;    // Additional binding
}
message UpdateMessageRequestOne {
  string message_id = 1; // Mapped to the URL
  Message message = 2;   // Mapped to the body
}

service Files {
  // HTTP | gRPC
  // -----|-----
  // `POST /files/cat.jpg <body>` | `UploadDownload(filename: "cat.jpg", file: {
  // content_type: "image/jpeg", data: <body>})"`
  rpc UploadDownload(UploadFileRequest) returns (google.api.HttpBody) {
    option (google.api.http) = {
      post : "/files/{filename}"
      body : "file"
    };
  }
  rpc LargeUploadDownload(stream UploadFileRequest)
      returns (stream google.api.HttpBody) {
    option (google.api.http) = {
      post : "/files/large/{filename}"
      body : "file"
    };
  }
}
message UploadFileRequest {
  string filename = 1;
  google.api.HttpBody file = 2;
}

// Valid a-z A-Z 0-9 . - _ ~ ! $ & ' ( ) * + , ; = : @
service WellKnown {
  // HTTP | gRPC
  // -----|-----
  // `GET /v1/wellknown/timestamp/2017-01-15T01:30:15.01Z` |
  // `Check(Timestamp{...})`
  rpc Check(Scalars) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/v1/wellknown/timestamp/{timestamp}"
      additional_bindings {get : "/v1/wellknown/duration/{duration}"}
    };
  }
}

message Scalars {
  oneof known_type {
    google.protobuf.Timestamp timestamp = 1;
    google.protobuf.Duration duration = 2;
  }
  // google.protobuf.FieldMask mask = 9; // TODO
}
